--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                         </div>
-                        <div class="bk-cvc-date-wrap field required ">
+                        <div class="bk-cvc-date-wrap">
                             <div class="field required bk-date">
                                 <label class="label" for="buckaroo_magento2_creditcards_expireDate">
                                     <span data-bind="i18n: 'Expiration:'"></span>
