--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -35,19 +35,14 @@
                     <div class="field required">
                         <legend class="label"> <span data-bind="i18n: 'Salutation:'"> </span> </legend>
                         <div class="control">
-                            <ul id="Saluation">
-                                <li>
-                                    <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
-                                    data-bind="options: gendersList(),
-                                     optionsText: $t('genderTitle'),
-                                     optionsValue: 'genderType',
-                                     optionsCaption: $t('-- Please Select Your Gender--'),
-                                     value: getSelectedGender,
-                                     event: { change: setSelectedGender }, attr: { 'data-validate': JSON.stringify({ 'required': true })}" class="select">
-                                     </select>
-                                </li>
-                            </ul>
-                            <div for="gender" generated="true" class="mage-error" id="gender-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
+                            <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
+                                data-bind="options: genderList,
+                                    optionsText: $t('genderTitle'),
+                                    optionsValue: 'genderType',
+                                    optionsCaption: $t('-- Please Select Your Gender--'),
+                                    value: getSelectedGender,
+                                    event: { change: setSelectedGender }, attr: { 'data-validate': JSON.stringify({ 'required': true })}" class="select">
+                            </select>
                         </div>
                     </div>
 
