--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -40,6 +40,7 @@
                             <label class="label" for="buckaroo_magento2_mrcash_cardholdername"> <span data-bind="i18n: 'Name on card:'"> </span> </label>
                             <div class="control">
                                 <input id="buckaroo_magento2_mrcash_cardholdername"
+                                       placeholder="John Doe"
                                        type="text"
                                        class="input-text field"
                                        name="payment[buckaroo_magento2_mrcash][cardholdername]"
