--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -52,6 +52,7 @@
                             <input id="buckaroo_magento2_payperemail_BillingFirstName"
                                    class="input-text field"
                                    type="text"
+                                   placeholder="John"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        attr: { 'data-validate': JSON.stringify({ 'required': true }) },
@@ -83,6 +84,7 @@
                             <input id="buckaroo_magento2_payperemail_BillingLastName"
                                    class="input-text field"
                                    type="text"
+                                   placeholder="Doe"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        attr: { 'data-validate': JSON.stringify({ 'required': true }) },
@@ -98,6 +100,7 @@
                             <input id="buckaroo_magento2_payperemail_Email"
                                    type="text"
                                    class="input-text field"
+                                   placeholder="email@example.com"
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-email': true })},
