--- a/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
@@ -38,6 +38,7 @@
                         </label>
                         <div class="control">
                             <input id="bankaccountholder" class="input-text field" type="text"
+                                   placeholder="John Doe"
                                    data-bind="
                                     value: bankaccountholder,
                                     valueUpdate: 'keyup',
@@ -55,6 +56,7 @@
                         </label>
                         <div class="control">
                             <input id="bankaccountnumber" class="input-text field" type="text"
+                                   placeholder="NL13TEST0123456789"
                                    data-bind="
                                     value: bankaccountnumber,
                                     valueUpdate: 'keyup',
