--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -79,7 +79,6 @@
 
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_capayablein3_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
-                        <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
                         <div class="control addon">
                             <input id="buckaroo_magento2_capayablein3_DoB"
                                    class="field"
@@ -98,7 +97,10 @@
                                            },
                                            valueUpdate: 'blur',
                                            value: dateValidate,
-                                           attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
+                                           attr: {
+                                            'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true }),
+                                            placeholder: $t('DD/MM/YYYY')
+                                           }"
                                    name="payment[buckaroo_magento2_capayablein3][customer_DoB]">
                         </div>
                         <div for="buckaroo_magento2_capayablein3_DoB" generated="true" class="mage-error" id="dob-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
