--- a/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_tinka.html
@@ -60,7 +60,6 @@
                     <!-- ko if: showNLBEFields -->
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_tinka_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
-                        <span><sup data-bind="i18n: '(DD/MM/YYYY)' "></sup></span>
                         <div class="control addon">
                             <input id="buckaroo_magento2_tinka_DoB"
                                    class="field"
@@ -74,13 +73,15 @@
                                             changeMonth: true,
                                             changeYear: true,
                                             yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
-                                            dateFormat: 'dd/mm/yy'
+                                            dateFormat: 'dd/MM/yy'
                                         }
                                    },
-                                   valueUpdate: 'blur',
+                                   valueUpdate: 'change',
                                    value: dateValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true })},
-                                   event: { blur: validateDob }"
+                                   attr: {
+                                    'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true }),
+                                    placeholder: $t('DD/MM/YYYY')
+                                   }"
                                    name="payment[buckaroo_magento2_tinka][customer_DoB]">
                         </div>
                     </div>
