added bic placeholder

--- a/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
@@ -39,6 +39,7 @@
                         </label>
                         <div class="control">
                             <input id="bicnumber" class="input-text field _error" type="text"
+                                   placeholder="AAAABBCCDDD"
                                    data-bind="
                                     value: bicnumber,
                                     valueUpdate: 'keyup',
