--- a/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
@@ -75,6 +75,7 @@
                         </label>
                         <div class="control">
                             <input id="bicnumber" class="input-text field" type="text"
+                                   placeholder="AAAABBCCDDD"
                                    data-bind="
                                     value: bicnumber,
                                     valueUpdate: 'keyup',
