--- a/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
@@ -41,11 +41,12 @@
                             <input id="bicnumber" class="input-text field _error" type="text"
                                    placeholder="AAAABBCCDDD"
                                    data-bind="
-                                    value: bicnumber,
+                                    value: bicNumber,
                                     valueUpdate: 'keyup',
                                     attr: {
-                                        'data-validate': JSON.stringify({ 'required': true,  'BIC':true  })
-                                    }
+                                        'data-validate': JSON.stringify({ 'required': true,  'bic':true  })
+                                    },
+                                    event: { blur: validateField }
                                    "
                                    name="payment[buckaroo_magento2_giropay][customer_bic]">
                         </div>
