--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_afterpay payment-method" data-bind="click: magentoTerms(), css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_afterpay payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -36,8 +36,7 @@
                                    class="input-text field"
                                    type="text"
                                    data-bind="
-                                   value: BillingName,
-                                   textInput: CustomerName()"
+                                   value: billingName"
                                    name="payment[buckaroo_magento2_afterpay][customer_billingName]"
                                    disabled >
                         </div>
@@ -55,7 +54,8 @@
                                    data-bind="
                                    valueUpdate: 'keyup',
                                    value: telephoneNumber,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true })}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true })},
+                                   event: { blur: validateField }"
                                    name="payment[buckaroo_magento2_afterpay][customer_telephone]">
                         </div>
                     </div>
@@ -101,9 +101,10 @@
                                    class="input-text field"
                                    type="text"
                                    data-bind="
-                                   value: bankaccountnumber,
+                                   value: bankAccountNumber,
                                    valueUpdate: 'keyup',
-                                   attr: {'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })}"
+                                   attr: {'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })},
+                                   event: { blur: validateField }"
                                    name="payment[buckaroo_magento2_afterpay][customer_iban]">
                         </div>
                     </div>
@@ -144,13 +145,14 @@
                                    type="text"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CocNumber,
+                                       value: cocNumber,
                                        attr: {
                                             'data-validate': JSON.stringify({
                                                 'required': true,
                                                 'minlength': 8
                                             }),
-                                        }">
+                                        },
+                                        event: { blur: validateField }">
                         </div>
                     </div>
 
@@ -163,9 +165,10 @@
                                    type="text"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CompanyName,
+                                       value: companyName,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true })
-                                        }">
+                                        },
+                                        event: { blur: validateField }">
                         </div>
                     </div>
                     <!-- /ko -->
@@ -180,7 +183,8 @@
                                    type="checkbox"
                                    data-bind="
                                    checked: termsValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true})}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true})},
+                                   event: { change: validateField }"
                                    name="payment[buckaroo_magento2_afterpay][termsCondition]">
                             <span>
                                 <a target="_blank"
@@ -190,7 +194,6 @@
                                    ">
                                 </a>
                             </span>
-                            <div for="buckaroo_magento2_afterpay_TermsCondition" generated="true" class="mage-error" id="buckaroo_magento2_afterpay_TermsCondition-error" style="display: none;"><span data-bind="i18n: 'This is a required field.' "></span></div>
                         </div>
                     </div>
 
