--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -1,4 +1,4 @@
-<div class="buckaroo_magento2_afterpay2 payment-method" data-bind="click: magentoTerms(), css: {'_active': (getCode() == isChecked())}">
+<div class="buckaroo_magento2_afterpay2 payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice bk-payment">
         <div class="bk-payment-wrap">
             <div class="bk-radio-wrap">
@@ -36,8 +36,7 @@
                                    class="input-text field"
                                    type="text"
                                    data-bind="
-                                   value: BillingName,
-                                   textInput: CustomerName()"
+                                   value: billingName"
                                    name="payment[buckaroo_magento2_afterpay2][customer_billingName]"
                                    disabled >
                         </div>
@@ -55,12 +54,14 @@
                                    data-bind="
                                    valueUpdate: 'keyup',
                                    value: telephoneNumber,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true })}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true })},
+                                   event: { blur: validateField }"
                                    name="payment[buckaroo_magento2_afterpay2][customer_telephone]">
                         </div>
                     </div>
                     <!-- /ko -->
 
+                    <!-- ko if: ((businessMethod == '3') && (selectedBusiness() == 1)) || businessMethod == '1' -->
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_afterpay2_DoB"> <span data-bind="i18n: 'Date of Birth:'"> </span> </label>
                         <div class="control addon">
@@ -88,8 +89,9 @@
                                    name="payment[buckaroo_magento2_afterpay2][customer_DoB]">
                         </div>
                     </div>
+                    <!-- /ko -->
 
-                    <!-- Show IBAN field when Acceptgiro (paymentMethod: 1) is activated in the backend-->
+                    <!-- Show IBAN field when Acceptgiro (paymentMethod: 1) is activated in the backend -->
 
                     <!-- ko if: paymentMethod == '1' -->
                     <div class="field required">
@@ -99,9 +101,10 @@
                                    class="input-text field"
                                    type="text"
                                    data-bind="
-                                   value: bankaccountnumber,
+                                   value: bankAccountNumber,
                                    valueUpdate: 'keyup',
-                                   attr: {'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })}"
+                                   attr: {'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })},
+                                   event: { blur: validateField }"
                                    name="payment[buckaroo_magento2_afterpay2][customer_iban]">
                         </div>
                     </div>
@@ -142,13 +145,14 @@
                                    type="text"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CocNumber,
+                                       value: cocNumber,
                                        attr: {
                                             'data-validate': JSON.stringify({
                                                 'required': true,
                                                 'minlength': 8
                                             }),
-                                        }">
+                                        },
+                                        event: { blur: validateField }">
                         </div>
                     </div>
 
@@ -161,9 +165,10 @@
                                    type="text"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: CompanyName,
+                                       value: companyName,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true })
-                                        }">
+                                        },
+                                        event: { blur: validateField }">
                         </div>
                     </div>
                     <!-- /ko -->
@@ -178,7 +183,8 @@
                                    type="checkbox"
                                    data-bind="
                                    checked: termsValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true})}"
+                                   attr: { 'data-validate': JSON.stringify({ 'required': true})},
+                                   event: { change: validateField }"
                                    name="payment[buckaroo_magento2_afterpay2][termsCondition]">
                             <span>
                                 <a target="_blank"
@@ -188,7 +194,6 @@
                                    ">
                                 </a>
                             </span>
-                            <div for="buckaroo_magento2_afterpay2_TermsCondition" generated="true" class="mage-error" id="buckaroo_magento2_afterpay2_TermsCondition-error" style="display: none;"><span data-bind="i18n: 'This is a required field.' "></span></div>
                         </div>
                     </div>
 
@@ -201,7 +206,7 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button id="button-action-checkout-afterpay2"
+                <button id="button-action-checkout-afterpay"
                         class="action primary checkout"
                         type="submit"
                         data-bind="
