--- a/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_ideal.html
@@ -6,15 +6,15 @@
                        name="payment[method]"
                        class="radio"
                        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
-                <label class="label" data-bind="attr: {'for': getCode()}" >
-                        <!-- ko text: getTitle() --><!-- /ko -->
-                        <!-- ko if: subtext !== null && subtext.length > 0 -->
-                       <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
-                        <!-- /ko -->
+                <label class="label" data-bind="attr: {'for': getCode()}">
+                    <!-- ko text: getTitle() --><!-- /ko -->
+                    <!-- ko if: subtext !== null && subtext.length > 0 -->
+                    <p class="bk-description" data-bind="text: subtext, style: subTextStyle"></p>
+                    <!-- /ko -->
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg'), alt: getCode() }"><img/>
             </div>
         </div>
     </div>
@@ -30,54 +30,43 @@
             <!--/ko-->
         </div>
 
-        <div class="payment-method-second-col billing-address-form" >
-            <form data-bind="mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}">
-                <fieldset class="fieldset payment">
-                    <div class="field required">
+        <div class="payment-method-second-col billing-address-form">
+            <div class="fieldset payment">
+                <div class="field required">
+                    <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
+                    <div class="control">
+
                         <!-- ko if: selectionType == '1' -->
-                        <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
-                        <div class="bk-issuer-list addon">
-                            <!-- ko foreach: bankTypes -->
-                            <label class="bank-types">
-                                <!-- ko if: logo !== null -->
-                                <img class="bank-types-img" data-bind="attr: {
-                                        'src': logo,
-                                        'width': 30,
-                                        'height': 23 }"
-                                    />
-                                    <!--/ko-->
-                                    <input class="bank-types-input"
-                                        type="radio"
-                                        data-bind="value: id, checked: $parent.selectedBank,
-                                        event: { change: $parent.validateField.bind($parent) }"
-                                        data-validate="{'validate-one-required-by-name':true}"
-                                        name="bank"
-                                    >
-                                <!-- ko text: name --><!--/ko-->
-                            </label>
-                            <!--/ko-->
-                        </div>
+                        <!-- ko foreach: banktypes -->
+                        <label class="bank-types">
+                            <img class="bank-types-img" data-bind="attr: {
+                                             'src': img,
+                                             'width': 30,
+                                             'height': 23 }"></img>
+                            <input class="bank-types-input" type="radio"
+                                   data-bind="value: code, click: $parent.setSelectedBank"
+                                   data-validate="{'validate-one-required-by-name':true}" name="bank">
+                            <!-- ko text: name --><!--/ko-->
+                        </label>
+                        <!--/ko-->
                         <!--/ko-->
 
                         <!-- ko if: selectionType == '2' -->
-                        <label for="buckaroo_magento2_ideal_issuer" data-bind="i18n: 'Select a bank:'"></label>
-                        <div class="control">
-                            <select id="buckaroo_magento2_ideal_issuer" class="field"
-                                    data-bind="value: selectedBank,
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
-                                    event: { change: validateField }"
-                                    name="buckaroo_magento2_ideal_issuer">
-                                <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
-                                <!-- ko foreach: bankTypes -->
-                                    <option data-bind="i18n: name, 'value': id"></option>
-                                <!--/ko-->
-                            </select>
-                        </div>
+                        <select id="buckaroo_magento2_ideal_issuer" class="field"
+                                data-bind="value: idealIssuer,
+                                    event: { change: setSelectedBankDropDown },
+                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) }"
+                                name="bank">
+                            <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
+                            <!-- ko foreach: banktypes -->
+                            <option data-bind="i18n: name, 'value': code"></option>
+                            <!--/ko-->
+                        </select>
                         <!--/ko-->
+
                     </div>
-                </fieldset>
-            </form>
+                </div>
+            </div>
         </div>
 
         <div class="checkout-agreements-block">
