--- a/view/frontend/web/template/payment/buckaroo_magento2_idealprocessing.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_idealprocessing.html
@@ -30,54 +30,44 @@
             <!--/ko-->
         </div>
 
-        <div class="payment-method-second-col billing-address-form" >
-            <form data-bind="mageInit: { 'validation': [] },
-                  attr: {'data-hasrequired': $t('* Required Fields')}">
-                <fieldset class="fieldset payment">
-                    <div class="field required">
+        <div class="payment-method-second-col billing-address-form">
+            <div class="fieldset payment">
+                <div class="field required">
+                    <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
+                    <div class="control">
+
                         <!-- ko if: selectionType == '1' -->
-                        <legend class="label" data-bind="i18n: 'Select a bank:'"></legend>
-                        <div class="bk-issuer-list addon">
-                            <!-- ko foreach: bankTypes -->
-                            <label class="bank-types">
-                                <!-- ko if: logo !== null -->
-                                <img class="bank-types-img" data-bind="attr: {
-                                        'src': logo,
+                        <!-- ko foreach: banktypes -->
+                        <label class="bank-types">
+                            <img class="bank-types-img" data-bind="attr: {
+                                             'src': img,
                                         'width': 30,
                                         'height': 23 }"
-                                    />
-                                    <!--/ko-->
-                                    <input class="bank-types-input"
-                                        type="radio"
-                                        data-bind="value: id, checked: $parent.selectedBank,
-                                        event: { change: $parent.validateField.bind($parent) }"
-                                        data-validate="{'validate-one-required-by-name':true}"
-                                        name="bank"
-                                    >
-                                <!-- ko text: name --><!--/ko-->
-                            </label>
-                            <!--/ko-->
-                        </div>
+                            />
+                            <input class="bank-types-input" type="radio"
+                                   data-bind="value: code, click: $parent.setSelectedBank"
+                                   data-validate="{'validate-one-required-by-name':true}" name="bank">
+                            <!-- ko text: name --><!--/ko-->
+                        </label>
+                        <!--/ko-->
                         <!--/ko-->
 
                         <!-- ko if: selectionType == '2' -->
-                        <label for="buckaroo_magento2_idealp_issuer" data-bind="i18n: 'Select a bank:'"></label>
-                        <div class="control">
-                            <select id="buckaroo_magento2_idealp_issuer" class="field"
-                                    data-bind="value: selectedBank,
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
-                                    event: { change: validateField }"
-                                    name="buckaroo_magento2_idealp_issuer">
-                                <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
-                                <!-- ko foreach: bankTypes -->
-                                    <option data-bind="i18n: name, 'value': id"></option>
-                                <!--/ko-->
-                            </select>
-                        </div>
+                        <select id="buckaroo_magento2_idealp_issuer" class="field"
+                                data-bind="value: idealIssuer,
+                                    event: { change: setSelectedBankDropDown },
+                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) }"
+                                name="bank">
+                            <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
+                            <!-- ko foreach: banktypes -->
+                            <option data-bind="i18n: name, 'value': code"></option>
+                            <!--/ko-->
+                        </select>
                         <!--/ko-->
+
                     </div>
-                </fieldset>
-            </form>
+                </div>
+            </div>
         </div>
 
         <div class="checkout-agreements-block">
