BP-2549 - Add Billink

--- a/view/frontend/web/template/payment/buckaroo_magento2_billink.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_billink.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
 
-                    <!-- ko if: isB2B -->
+                    <!-- ko if: showB2B -->
                     <div class="field required">
                         <legend class="label"> <span data-bind="i18n: 'Chamber of Commerce number:'"> </span> </legend>
                         <div class="control">
