BP-2301 - Magento 2 - Refactored - Afterpay OLD does not show an error on failure

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -227,6 +227,10 @@
         <!-- ko foreach: getRegion('messages') -->
         <!-- ko template: getTemplate() --><!-- /ko -->
         <!--/ko-->
+        <div data-role="checkout-messages" class="messages" data-bind="visible: isVisible(), click: removeAll">
+            <!-- ko foreach: messageContainer.getErrorMessages() --><!--/ko-->
+            <!-- ko foreach: messageContainer.getSuccessMessages() --><!--/ko-->
+        </div>
 
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
